Sep 03 2002  2.5.2  Initial client display panel ('c').  Lots left to be done.
                    Updated docs for client
Sep 01 2002  2.5.2  Details no longer prints gps twice for single networks.
Aug 31 2002  2.5.2  Merged patch from poptix for gpsmap to support terraserver
                     images and to copy support for the new mapblast maps from
                     gpsdrive.
                    Set default ethereal directory to /usr/src/ethereal-0.9.6
                    Fixed speech error on blank SSID
Aug 30 2002  2.5.2  Added fixed-parameter support on bigendian systems.  Normal
                     packet detection/dissection should occur on bigendian now.
                    Minor tweaks to packet noise detection
                    Moved packet rate calculation to server-side
                    Fixed type field in files for lucent routers
Aug 29 2002  2.5.2  Fixed reassociation subtype
                    Fixed netstumbler detection signature
                    Started fixing support for bigendian systems.  Initial
                     packet type dissection and network detection should
                     work.
                    Added netstumbler 3.30 detection (     Intentionally blank)
                    Suppressed error catching for GPS to accomadate new gpsd
                     and garmin interaction leading to rapid loss/regain of gps
Aug 28 2002  2.5.2  Merged diff from jwright to the ARM docs to alleviate some
                     questions and problems.
                    More speed improvements to panelfront
Aug 27 2002  2.5.2  Resampled alert.wav to be much smaller.
                    Merged patch from poptix to use mappoint since MapBlast
                     encodes their URL's now.  gpsmap works again.
Aug 25 2002  2.5.2  Optomizations to panelfront
                    Rudimentary deauthentication flood detection
                    kismet_curses exit code used to determine if a kill of 